# DiscordBot2.0

./: .json  .txt  BotGui.py  main.py  pyproject.toml
assets/: amgi.py  cogs.py  dev.py  funny.py  general.py  hidden.py  ids.py  info.py  loops.py  mods.py  music.py
assets/in_dev/: economy.py  languages.py  loops.py  music.py
assets/json/: economy.json  reminders.json  sanctions.json  suggestions.json
assets/templates/: cogtemp.py
