[tool.poetry]
name = "discordbot20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.15.0"
PyNaCl = "^1.4.0"
docx = "^0.2.4"
httpcore = "^0.12.3"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
